--- a/iva-microservice-dev.properties
+++ b/iva-microservice-dev.properties
@@ -3,3 +3,8 @@ iva.property=Cliente Profile Dev
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=false
+
+#BBDD MySQL - Datos de Acceso
+spring.datasource.url=jdbc:mysql://192.168.1.235:3306/BDD_FARMAGIL?serverTimezone=UTC
+spring.datasource.username=farmagilx
+spring.datasource.password=Agis.3578
