--- a/iva-microservice-dev.properties
+++ b/iva-microservice-dev.properties
@@ -8,3 +8,5 @@ spring.jpa.generate-ddl=false
 spring.datasource.url=jdbc:mysql://192.168.1.235:3306/BDD_FARMAGIL?serverTimezone=UTC
 spring.datasource.username=farmagilx
 spring.datasource.password=Agis.3578
+
+app.testProp=Property of test
